To prevent the code text from sticking out of the div.

--- a/_sass/layout/type-md.scss
+++ b/_sass/layout/type-md.scss
@@ -172,6 +172,7 @@
             color: #859900;
             @include border-radius($border-radius-medium);
             padding: 2px 6px;
+            word-wrap: break-word;
         }
     }
 
